fixed padding and spacing issues on nav bar and nav links working

--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ html,body {
 }
 
 .nav, footer {
-    padding: 1% 0;
+    padding: 0;
 }
 
 .nav {
@@ -33,7 +33,6 @@ html,body {
     top: 0;
     z-index: 10;
     text-align: right;
-    line-height: 70px;
     height: 70px;
 }
 
@@ -55,9 +54,8 @@ html,body {
 }
 
 label {
-    margin: 0 40px 0 0;
+    margin: 0 5px 0 0;
     font-size: 26px;
-    line-height: 70px;
     cursor: pointer;
 }
 
@@ -172,7 +170,7 @@ footer > span {
 
     .nav,
     footer {
-        padding: 1% 0;
+        padding: 0;
     }
 
     .headline {
@@ -230,21 +228,6 @@ footer > span {
     ul > li {
         line-height: 25px;
     }
-
-   /* .menu {
-        display: none;
-    }
-
-    .menu a {
-        display: block;
-        border-bottom: 1px solid grey;
-        margin: 0;
-        text-align:center;
-    }
-
-    #toggle:checked + .menu {
-        display: block;
-    }*/
 }
 
 @media screen and (min-width: 1024px) {
